Update dancer names and improve Dancing Crane info

--- a/about-algara.html
+++ b/about-algara.html
@@ -46,7 +46,7 @@
 
                     <span class="image main"><img src="images/algara.jpg" alt="" /></span>
 
-                    <h2>Dancers</h2>
+                    <h2>Members</h2>
                     <p><i>Listed alphabetically by last name:</i></p>
                     <ul>
                         <li>Maria Bonevelly</li>
@@ -92,6 +92,7 @@
 							<span class="opener">About</span>
 							<ul>
 								<li><a href="about-gorana.html">Gorana Dance</a></li>
+                                <li><a href="about-dancing-crane.html">Dancing Crane</a></li>
 								<li><a href="about-algara.html">Algara Dance</a></li>
 							</ul>
 						</li>
