--- a/about-dancing-crane.html
+++ b/about-dancing-crane.html
@@ -31,25 +31,39 @@
                 <!-- Content -->
                 <section>
                     <header class="main">
-                        <h1>Past Performances</h1>
+                        <h2>About Dancing Crane</h2>
                     </header>
+                    <p>
+                        Dancing Crane is the oldest Georgian cultural center and repertory theater company in New York.
+                        They offer master classes in traditional Georgian dance, music, and theater for students of all
+                        ages, and raise awareness of these traditions through world-class performances throughout the five
+                        boroughs of New York. They address the needs of a growing Georgian immigrant community, offering
+                        educational programs for families and children, and providing a space for professional artists to
+                        practice and elevate their work.
+                    </p>
+                    <p>
+                        Find out more at <a href="https://www.dancingcrane.org">dancingcrane.org</a>
+                    </p>
 
-                    <div class="iframe">
-                        <iframe src="https://www.youtube.com/embed/2jl1K-lkW4I" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                    <p><br></p>
-                    <!-- width="560" height="315" -->
-                    <div class="iframe">
-                        <iframe src="https://www.youtube.com/embed/L1NgiA2Av8I" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
+                    <span class="image main"><img src="images/dancing-crane.jpg" alt="" /></span>
+
+                    <h2>Members</h2>
+                    <p><i>Listed alphabetically by last name:</i></p>
+                    <ul>
+                        <li>Sofiko Alania</li>
+                        <li>Girogi Alimbarashvili </li>
+                        <li>Evelina Alimbarashvili </li>
+                        <li>Natalia Dabrundashvili </li>
+                        <li>Nana Davitadze</li>
+                        <li>Keso Goleteani </li>
+                        <li>Elene Machavariani</li>
+                        <li>Tengiz Qobalia</li>
+                        <li>Malkhaz Shubitidze</li>
+                        <li>Ilia Svianaidze </li>
+                        <li>Levan Torchinava </li>
+                        <li>Tamar Tsivilashvili </li>
+                    </ul>
                 </section>
-
             </div>
         </div>
 
