--- a/about-gorana.html
+++ b/about-gorana.html
@@ -50,7 +50,7 @@
 
                     <span class="image main"><img src="images/gorana2.jpg" alt="" /></span>
 
-                    <h2>Dancers</h2>
+                    <h2>Members</h2>
                     <p><i>Listed alphabetically by last name:</i></p>
                     <ul>
                         <li>Cvetelina Atanasova</li>
@@ -58,9 +58,10 @@
                         <li>Mariya Dimitrova</li>
                         <li>Chavdar Dobranov</li>
                         <li>Evgeni Dobranov</li>
+                        <li>Angelika Glogov</li>
                         <li>Lily Grantcharova</li>
                         <li>Jianying Hu</li>
-                        <li>Elissaveta Iordanova</li>
+                        <li>Elissaveta Iordanova (Choreographer)</li>
                         <li>Iva Iordanova</li>
                         <li>Assia Mihov</li>
 						<li>Hristo Mihovski</li>
@@ -128,6 +129,7 @@
 							<span class="opener">About</span>
 							<ul>
 								<li><a href="about-gorana.html">Gorana Dance</a></li>
+                                <li><a href="about-dancing-crane.html">Dancing Crane</a></li>
 								<li><a href="about-algara.html">Algara Dance</a></li>
 							</ul>
 						</li>
