--- a/credits.html
+++ b/credits.html
@@ -47,8 +47,10 @@
 									<li>Chavdar Dobranov</li>
 									<li>Evgeni Dobranov</li>
 									<li>Angelika Glogov</li>
+									<li>Lily Grantcharova</li>
 									<li>Jianying Hu</li>
 									<li>Elissaveta Iordanova (Choreographer)</li>
+									<li>Iva Iordanova</li>
 									<li>Assia Mihov</li>
 									<li>Hristo Mihovski</li>
 									<li>Elena Miteva</li>
@@ -69,18 +71,18 @@
 							<div class="content">
 								<h3>Dancing Crane Georgian Dance</h3>
 								<ul>
-									<li>Ilia Svianaidze </li>
-									<li>Levan Torchinava </li>
-									<li>Malkhaz Shubitidze</li>
-									<li>Girogi Alimbarashvili </li>
-									<li>Tengiz Qobalia</li>
-									<li>Nana Davitadze</li>
 									<li>Sofiko Alania</li>
+									<li>Girogi Alimbarashvili </li>
 									<li>Evelina Alimbarashvili </li>
-									<li>Tamar Tsivilashvili </li>
 									<li>Natalia Dabrundashvili </li>
+									<li>Nana Davitadze</li>
 									<li>Keso Goleteani </li>
 									<li>Elene Machavariani</li>
+									<li>Tengiz Qobalia</li>
+									<li>Malkhaz Shubitidze</li>
+									<li>Ilia Svianaidze </li>
+									<li>Levan Torchinava </li>
+									<li>Tamar Tsivilashvili </li>
 								</ul>
 
 								<h5>&nbsp;</h5>
@@ -230,6 +232,7 @@
 							<span class="opener">About</span>
 							<ul>
 								<li><a href="about-gorana.html">Gorana Dance</a></li>
+								<li><a href="about-dancing-crane.html">Dancing Crane</a></li>
 								<li><a href="about-algara.html">Algara Dance</a></li>
 							</ul>
 						</li>
