--- a/orenda.html
+++ b/orenda.html
@@ -594,6 +594,7 @@
 							<span class="opener">About</span>
 							<ul>
 								<li><a href="about-gorana.html">Gorana Dance</a></li>
+                                <li><a href="about-dancing-crane.html">Dancing Crane</a></li>
 								<li><a href="about-algara.html">Algara Dance</a></li>
 							</ul>
 						</li>
