--- a/program.html
+++ b/program.html
@@ -64,10 +64,14 @@
                     <p>
                         Dancing Crane is an ensemble which includes professional dancers who have learned and
                         performed since childhood in the country of Georgia. Their performances present a program
-                        of the regional dances of Georgia in various regional costumes. Victor Sirelson is a
-                        researcher of ethnic dance and music. He became involved with the study of Georgian dance
-                        and formed a collaboration with Merab Tsereteli, a dancer with the Sukhishvili Ensemble
-                        in Georgia.
+                        of the regional dances of Georgia in various regional costumes. They represent the oldest
+                        Georgian cultural center and repertory theater company in New York.
+                    </p>
+                    <p>
+                        Victor Sirelson, the founder, is a researcher of ethnic dance and music. He became involved
+                        with the study of Georgian dance and formed a collaboration with Merab Tsereteli, a dancer
+                        with the Sukhishvili Ensemble in Georgia. Find out more about their dance, music, theater and
+                        youth programs at <a href="https://www.dancingcrane.org">dancingcrane.org</a>
                     </p>
                     <span class="image main">
                         <img src="images/dancing-crane.jpg" style="max-width:1000px; margin-left:auto; margin-right:auto;" alt="" />
@@ -316,6 +320,7 @@
 							<span class="opener">About</span>
 							<ul>
 								<li><a href="about-gorana.html">Gorana Dance</a></li>
+                                <li><a href="about-dancing-crane.html">Dancing Crane</a></li>
 								<li><a href="about-algara.html">Algara Dance</a></li>
 							</ul>
 						</li>
